WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270140
[UnifiedPDF] Word selections should not be generated when clicking on annotations
https://bugs.webkit.org/show_bug.cgi?id=270140
Summary
[UnifiedPDF] Word selections should not be generated when clicking on annotat...
Abrar Rahman Protyasha
Reported
2024-02-26 19:43:57 PST
Sometimes we arbitrarily create a text selection when clicking on annotations (or even when just clicking around on the frame). This is a result of us overriding the current selection unnecessarily in UnifiedPDFPlugin::lookupTextAtLocation. Let's fix this.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-26 19:44:05 PST
<
rdar://problem/123666112
>
Abrar Rahman Protyasha
Comment 2
2024-02-26 20:24:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25149
EWS
Comment 3
2024-02-27 01:37:48 PST
Committed
275370@main
(6e854117d8ef): <
https://commits.webkit.org/275370@main
> Reviewed commits have been landed. Closing PR #25149 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug